tests/fail/op_error_on_string.has
function main():int{
    var foobar = "foobar" - "bar" // error

    return 0
}